# Fit-Launcher

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  README.md  bun.lockb  commitlint.config.ts  eslint.config.js  index.html  install_deps.sh  install_deps_ubuntu.sh  package-lock.json  package.json  rustfmt.toml  splashscreen.html  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.js.timestamp-1728377533960-873082aff5286.mjs
src/: App.css  (+8 more)
src-tauri/: .gitignore  2.0.0_ver.md  Cargo.toml  build.rs  necessary_libs.md  tauri.conf.json  tauri.linux.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: desktop.json  fs_main.json  migrated.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/local-crates/fit-launcher-aria2/: Cargo.toml
src-tauri/local-crates/fit-launcher-aria2/src/: aria2.rs  commands.rs  error.rs  lib.rs  structs.rs
src-tauri/local-crates/fit-launcher-aria2/src/tests/: torrent.rs
src-tauri/local-crates/fit-launcher-bin-installer/src/: lib.rs
src-tauri/local-crates/fit-launcher-cache/: Cargo.toml
src-tauri/local-crates/fit-launcher-cache/src/: commands.rs  error.rs  lib.rs  manager.rs  store.rs
src-tauri/local-crates/fit-launcher-config/: Cargo.toml
src-tauri/local-crates/fit-launcher-config/src/: lib.rs
src-tauri/local-crates/fit-launcher-config/src/client/: dns.rs  mod.rs
src-tauri/local-crates/fit-launcher-config/src/client/cookies/: mod.rs
src-tauri/local-crates/fit-launcher-config/src/client/dns/: mod.rs  resolver.rs
src-tauri/local-crates/fit-launcher-config/src/settings/: commands.rs  config.rs  creation.rs  mod.rs
src-tauri/local-crates/fit-launcher-ddl/: Cargo.toml
src-tauri/local-crates/fit-launcher-ddl/src/: commands.rs  functions.rs  lib.rs  structs.rs
src-tauri/local-crates/fit-launcher-debrid/: Cargo.toml
src-tauri/local-crates/fit-launcher-debrid/src/: commands.rs  config.rs  error.rs  lib.rs  registry.rs  types.rs
src-tauri/local-crates/fit-launcher-debrid/src/providers/: all_debrid.rs  mod.rs  real_debrid.rs  traits.rs
src-tauri/local-crates/fit-launcher-download-manager/: Cargo.toml
src-tauri/local-crates/fit-launcher-download-manager/src/: aria2.rs  commands.rs  debouncer.rs  dispatch.rs  error.rs  lib.rs  manager.rs  persistence.rs  types.rs
src-tauri/local-crates/fit-launcher-download-manager/src/tests/: mod.rs
src-tauri/local-crates/fit-launcher-game-comments/: Cargo.toml
src-tauri/local-crates/fit-launcher-game-comments/src/: commends.rs  core_commands.rs  lib.rs  types.rs
src-tauri/local-crates/fit-launcher-installer-controller/: Cargo.toml  build.rs
src-tauri/local-crates/fit-launcher-installer-controller/src/: automation.rs  defender.rs  errors.rs  events.rs  main.rs  utils.rs
src-tauri/local-crates/fit-launcher-installer-controller/src/installer/: mod.rs  runner.rs
src-tauri/local-crates/fit-launcher-installer-controller/src/ipc/: mod.rs  protocol.rs  server.rs
src-tauri/local-crates/fit-launcher-integrations/: Cargo.toml
src-tauri/local-crates/fit-launcher-integrations/src/: credentials.rs  lib.rs
src-tauri/local-crates/fit-launcher-integrations/src/credentials/: commands.rs  mod.rs  store.rs  types.rs
src-tauri/local-crates/fit-launcher-integrations/src/debrid/: commands.rs  mod.rs  types.rs
src-tauri/local-crates/fit-launcher-integrations/src/debrid/realdebrid/: api.rs  mod.rs  types.rs
src-tauri/local-crates/fit-launcher-ipc/: Cargo.toml
src-tauri/local-crates/fit-launcher-ipc/src/: lib.rs  tests.rs
src-tauri/local-crates/fit-launcher-library/: Cargo.toml
src-tauri/local-crates/fit-launcher-library/src/: commands.rs  core_commands.rs  legacy.rs  lib.rs  structs.rs
src-tauri/local-crates/fit-launcher-real-debrid/: Cargo.toml
src-tauri/local-crates/fit-launcher-real-debrid/src/: client.rs  commands.rs  errors.rs  lib.rs  structs.rs
src-tauri/local-crates/fit-launcher-scraping/: Cargo.toml
src-tauri/local-crates/fit-launcher-scraping/src/: captcha.rs  commands.rs  discovery.rs  errors.rs  lib.rs  parser.rs  scraping.rs  search_index.rs  sitemap.rs  structs.rs
src-tauri/local-crates/fit-launcher-scraping/src/db/: games.rs  mod.rs  search.rs
src-tauri/local-crates/fit-launcher-scraping/src/global/: captcha.rs  commands.rs  functions.rs  mod.rs
src-tauri/local-crates/fit-launcher-scraping/tests/: search_index.rs
src-tauri/local-crates/fit-launcher-torrent/: Cargo.toml
src-tauri/local-crates/fit-launcher-torrent/src/: commands.rs  config.rs  dht.rs  errors.rs  functions.rs  handler.rs  hooks.rs  legacy_config.rs  lib.rs  model.rs
src-tauri/local-crates/fit-launcher-torrent/src/utils/: mod.rs
src-tauri/local-crates/fit-launcher-torrent/tests/: parse_torrent.rs
src-tauri/local-crates/fit-launcher-ui-automation/: Cargo.toml
src-tauri/local-crates/fit-launcher-ui-automation/src/: controller_client.rs  controller_manager.rs  defender.rs  lib.rs  mighty.rs  mighty_automation.rs  mighty_commands.rs  process_utils.rs
src-tauri/local-crates/fit-launcher-ui-automation/src/api/: mod.rs  types.rs
src-tauri/local-crates/fit-launcher-ui-automation/src/emitter/: mod.rs  setup.rs
src-tauri/local-crates/fit-launcher-ui-automation/src/extraction/: commands.rs  errors.rs  functions.rs  mod.rs
src-tauri/local-crates/fit-launcher-ui-automation/src/helper/: mod.rs
src-tauri/local-crates/fit-launcher-ui-automation/src/mighty/: controls.rs  mod.rs  windows.rs
src-tauri/local-crates/fit-launcher-ui-automation/src/winevents/: events.rs  mod.rs
src-tauri/local-crates/fit-launcher-ui-automation/tests/: test_install.rs
src-tauri/scripts/: download_build.ps1
src-tauri/src/: custom_ui_automation.rs  discovery_scraping.rs  downloadingfunc.rs  game_comments.rs  game_info.rs  image_colors.rs  main.rs  mighty.rs  net_client_config.rs  scrapingfunc.rs  settings_initialization.rs  torrentfunc copy.rs  torrentfunc.rs  utils.rs
src-tauri/src/aria2_func/: mod.rs
src-tauri/src/bootstrap/: hooks.rs  json_cleanup.rs  logging.rs  mod.rs  network.rs  setup.rs  tray.rs
src-tauri/src/torrentfunc/: test.json  torrent_config.rs
(+313 files in other folders)
