[package]
name = "fit-launcher"
version = "0.0.1"
description = "FitLauncher"
authors = ["CarrotRub"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
tauri-helper = "0.1.4"

[dependencies]
# Tauri plugins
tauri = { workspace = true }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-store = "2.2.0"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-updater = { version = "2.7.1", features = ["rustls-tls"] }
tauri-helper = { workspace = true }

# Specta for bindings & TypeScript generation
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true }

# Serialization and parsing
serde = { workspace = true }
serde_json = { workspace = true }


# Utilities
directories = { workspace = true }
once_cell = { workspace = true }
lazy_static = "1.5.0"
anyhow = { workspace = true }
thiserror = { workspace = true }

# Networking
http = { workspace = true }
reqwest = { workspace = true }

# Async and concurrency
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Parsing and scraping
scraper = { workspace = true }
kuchiki = { workspace = true }
regex = { workspace = true }
select = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Time and date
chrono = "0.4.38"

# Randomization
rand = { workspace = true }

# Caching
lru = "0.12.4"

# Image processing
image = "0.25.4"
palette = "0.7.6"
color-thief = "0.2.2"

# Local Crates
fit-launcher-torrent = { path = "./local-crates/fit-launcher-torrent" }
fit-launcher-ui-automation = { path = "./local-crates/fit-launcher-ui-automation" }
fit-launcher-config = { path = "./local-crates/fit-launcher-config" }
fit-launcher-scraping = { path = "./local-crates/fit-launcher-scraping" }
fit-launcher-aria2 = { path = "./local-crates/fit-launcher-aria2" }
fit-launcher-ddl = { path = "./local-crates/fit-launcher-ddl" }
fit-launcher-library = { path = "./local-crates/fit-launcher-library" }

# Workspace configuration
[workspace]
members = [
    ".",
    "local-crates/fit-launcher-aria2",
    "local-crates/fit-launcher-config",
    "local-crates/fit-launcher-ddl",
    "local-crates/fit-launcher-library",
    "local-crates/fit-launcher-scraping",
    "local-crates/fit-launcher-torrent",
    "local-crates/fit-launcher-ui-automation",
]

#TODO: Clean unused deps
[workspace.dependencies]
tauri = { version = "2.2.0", features = ["protocol-asset", "tray-icon"] }
tauri-helper = "0.1.4"
tauri-plugin-shell = "2.2.0"
specta = { version = "2.0.0-rc.22", features = [
    "serde",
    "serde_json",
    "derive",
    "function",
    "indexmap",
    "chrono",
    "url",
    "uuid",
] }

tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"

aria2-ws = { git = "https://github.com/CarrotRub/aria2-ws-rs", version = "0.5.2", branch = "specta-types", features = [
    "specta",
] }
anyhow = "1.0.86"

http = "1.3.1"
reqwest = { version = "0.12.9", features = [
    "blocking",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "hickory-dns",
] }
librqbit = { version = "8.0.0", features = [
    "tracing-subscriber-utils",
    "http-api",
    "upnp-serve-adapter",
] }
parking_lot = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "ansi",
] }
tracing-appender = "0.2.3"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.12.0"
directories = "6.0.0"
uiautomation = "0.18.0"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_SystemInformation",
] }
windows-result = "0.3.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
sysinfo = "0.34.2"
fit-launcher-ui-automation = { path = "./local-crates/fit-launcher-ui-automation" }
fit-launcher-torrent = { path = "./local-crates/fit-launcher-torrent" }
fit-launcher-config = { path = "./local-crates/fit-launcher-config" }
fit-launcher-aria2 = { path = "./local-crates/fit-launcher-aria2" }

hickory-resolver = { version = "0.24.2", features = ["dns-over-https-rustls"] }
once_cell = "1.21.3"
rand = { version = "0.9.1", features = ["small_rng"] }
futures = "0.3.31"
futures-util = "0.3"

# Parsing and scraping
scraper = "0.23.1"
kuchiki = "0.8.1"
regex = "1.11.1"
select = "0.6"
thiserror = "2.0.12"
fitgirl-decrypt = { git = "https://github.com/CarrotRub/fitgirl-decrypt", branch = "specta", default-features = false, features = [
    "specta",
    "reqwest",
] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
