[package]
name = "fit-launcher"
version = "0.0.1"
description = "FitLauncher"
authors = ["CarrotRub"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
tauri-helper = "0.2.1"

[profile.dev]
debug = 0
incremental = true
codegen-units = 256


[profile.release]
incremental = false
debug = false
strip = "symbols"
lto = true
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'


[dependencies]
# Tauri plugins
tauri = { workspace = true }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = "2.4.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.4.1"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = { version = "2.9.0", features = ["rustls-tls"] }
tauri-helper = { workspace = true }

# Specta for bindings & TypeScript generation
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true }

# Serialization and parsing
serde = { workspace = true }
serde_json = { workspace = true }


# Utilities
directories = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Networking
reqwest = { workspace = true }

# Async and concurrency
tokio = { workspace = true }
futures = { workspace = true }

# Parsing and scraping
scraper = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Time and date
chrono = "0.4.38"


# Caching
lru = "0.16.2"

# Image processing
image = { version = "0.25.4", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
color-thief = "0.2.2"

# Local Crates
fit-launcher-torrent = { path = "./local-crates/fit-launcher-torrent" }
fit-launcher-ui-automation = { path = "./local-crates/fit-launcher-ui-automation" }
fit-launcher-config = { path = "./local-crates/fit-launcher-config" }
fit-launcher-scraping = { path = "./local-crates/fit-launcher-scraping" }
fit-launcher-library = { path = "./local-crates/fit-launcher-library" }
fit-launcher-download-manager = { path = "./local-crates/fit-launcher-download-manager" }
fit-launcher-cache = { workspace = true }
tauri-plugin-notification = "2.3.3"

# Used for bindgen
fit-launcher-aria2 = { path = "./local-crates/fit-launcher-aria2" }
fit-launcher-ddl = { path = "./local-crates/fit-launcher-ddl" }
fit-launcher-integrations = { path = "./local-crates/fit-launcher-integrations" }

# Workspace configuration
[workspace]
members = [
    ".",
    "local-crates/fit-launcher-download-manager",
    "local-crates/fit-launcher-aria2",
    "local-crates/fit-launcher-config",
    "local-crates/fit-launcher-ddl",
    "local-crates/fit-launcher-integrations",
    "local-crates/fit-launcher-installer-controller",
    "local-crates/fit-launcher-library",
    "local-crates/fit-launcher-scraping",
    "local-crates/fit-launcher-torrent",
    "local-crates/fit-launcher-ui-automation",
    "local-crates/fit-launcher-cache",
    "local-crates/fit-launcher-ipc",
]
resolver = "3"

#TODO: Clean unused deps
[workspace.dependencies]
tauri = { version = "2.9.5", features = [
    "protocol-asset",
    "tray-icon",
    "devtools",
] }
tauri-helper = "0.2.1"

tauri-plugin-shell = "2.3.3"
specta = { version = "2.0.0-rc.22", features = [
    "serde",
    "serde_json",
    "derive",
    "function",
    "indexmap",
    "chrono",
    "url",
    "uuid",
] }

tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"

aria2-ws = { git = "https://github.com/CarrotRub/aria2-ws-rs", rev = "b76414d", features = [
    "specta",
] }
anyhow = "1.0.100"

# Torrent parsing
librqbit-buffers = "4.2.0"
librqbit-core = "5.0.0"

http = "1.3.1"
reqwest = { version = "0.12.24", features = [
    "blocking",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "hickory-dns",
] }
parking_lot = "0.12.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "json",
    "ansi",
] }
tracing-appender = "0.2.3"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.12.0"
directories = "6.0.0"
uiautomation = "0.24.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    # admin elevated check
    "Win32_Security",
    "Win32_System_Threading",
    # process enumeration
    "Win32_System_Diagnostics_ToolHelp",
] }
windows-result = "0.4.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
sysinfo = { version = "0.37.2", default-features = false, features = [
    "system",
] }
fit-launcher-ui-automation = { path = "./local-crates/fit-launcher-ui-automation" }
fit-launcher-torrent = { path = "./local-crates/fit-launcher-torrent" }
fit-launcher-config = { path = "./local-crates/fit-launcher-config" }
fit-launcher-aria2 = { path = "./local-crates/fit-launcher-aria2" }
fit-launcher-integrations = { path = "./local-crates/fit-launcher-integrations" }
fit-launcher-cache = { path = "./local-crates/fit-launcher-cache" }

hickory-resolver = { version = "0.25.2", features = ["https-ring"] }
once_cell = "1.21.3"
rand = { version = "0.9.2", features = ["small_rng"] }
futures = "0.3.31"
tokio-util = "0.7"

# Hashing
ahash = "0.8"
sha2 = "0.10"

# Time and identifiers
chrono = "0.4"
uuid = { version = "1.18", features = ["v4"] }

# Concurrency
crossbeam-skiplist = "0.1.3"

# Parsing and scraping
scraper = "0.25.0"
regex = "1.12.2"
thiserror = "2.0.12"
fitgirl-decrypt = { git = "https://github.com/CarrotRub/fitgirl-decrypt", branch = "specta", default-features = false, features = [
    "specta",
    "reqwest",
] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Optimize all dependencies even in debug/test builds
[profile.dev.package."*"]
opt-level = 2
