[package]
name = "fit-launcher-aria2"
version = "0.1.0"
edition = "2024"

[dependencies]
aria2-ws = { workspace = true }
fit-launcher-torrent = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
specta = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
fit-launcher-ddl = { path = "../fit-launcher-ddl" }

[target.'cfg(target_os = "windows")'.dependencies]
anyhow = { workspace = true }
crossbeam-skiplist = { workspace = true }
winreg = "0.55.0"
listdisk-rs = { version = "0.3.0", default-features = false, features = [
    "wmi",
    "drive-info",
    "physical-disk",
    "utils",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
sysproxy = { git = "https://github.com/zzzgydi/sysproxy-rs", rev = "355d9c98" }
