[package]
name = "fit-launcher-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { workspace = true }
specta = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }

fit-launcher-config = { workspace = true }
fit-launcher-torrent = { workspace = true }

lru-cache-adaptor = "0.1.1"
kanal = { version = "0.1.1", default-features = false, features = ["async"] }
