[package]
name = "fit-launcher-config"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }

directories = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

hickory-resolver = { workspace = true }

specta = { workspace = true }

thiserror = { workspace = true }
