[package]
name = "fit-launcher-download-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aria2-ws = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fit-launcher-aria2 = { workspace = true }
fit-launcher-torrent = { workspace = true }
fit-launcher-ddl = { path = "../fit-launcher-ddl" }
fit-launcher-ui-automation = { path = "../fit-launcher-ui-automation" }
sha2 = { workspace = true }
tauri = { workspace = true }
directories = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
fit-launcher-scraping = { path = "../fit-launcher-scraping" }
fit-launcher-config = { path = "../fit-launcher-config" }
