[package]
name = "fit-launcher-automation"
version = "0.1.0"
edition = "2024"
description = "FitLauncher Installer Service"

[[bin]]
name = "FitLauncherService"
path = "src/main.rs"

[build-dependencies]
tauri-winres = "0.3"

[dependencies]
# Windows APIs
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    # No active window
    "Win32_UI_Shell",
    "Win32_System_Registry",
] }
windows-result = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System info
sysinfo = { workspace = true }

# Audio muting
winmix = "0.1.3"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
