[package]
name = "fit-launcher-integrations"
version = "0.1.0"
edition = "2024"
description = "External service integrations (Debrid services, etc.) for Fit-Launcher"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
specta = { workspace = true }
tauri = { workspace = true }
tauri-plugin-stronghold = { workspace = true }
directories = { workspace = true }
argon2 = "0.5"
