[package]
name = "fit-launcher-library"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { workspace = true }
specta = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fit-launcher-scraping = { path = "../fit-launcher-scraping/" }
