[package]
name = "fit-launcher-scraping"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { workspace = true, features = ["unstable"] }
specta = { workspace = true }
fit-launcher-config = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
scraper = { workspace = true, features = ["atomic"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["chrono"] }
tracing = { workspace = true }
once_cell = { workspace = true }
ahash = { workspace = true }

time = { version = "0.3.41", features = ["formatting"] }
rand = { workspace = true }
rusqlite = { version = "0.37.0", features = ["bundled"] }
itertools = "0.14"
