[package]
name = "fit-launcher-torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true }
aria2-ws = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde_with = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
directories = { workspace = true }
fit-launcher-ui-automation = { workspace = true }
fit-launcher-scraping = { path = "../fit-launcher-scraping" }
fitgirl-decrypt = { workspace = true }

librqbit-core = { workspace = true }
librqbit-buffers = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

librqbit = { version = "8.1.1", features = ["http-api-client"] }
strum = { version = "0.27.2", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
] }
