[package]
name = "fit-launcher-ui-automation"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[dependencies]
fit-launcher-scraping = { path = "../fit-launcher-scraping" }

sysinfo = { workspace = true }
serde = { workspace = true }
tauri = { workspace = true }
tracing = { workspace = true }
fit-launcher-config = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.17"
uuid = "1.18.1"
unrar = "0.5.8"
[target.'cfg(windows)'.dependencies]
uiautomation = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
windows-result = { workspace = true }

[target.'cfg(unix)'.dependencies]
fix-path-env = { workspace = true }
