[package]
name = "fit-launcher-ui-automation"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[dependencies]
fit-launcher-scraping = { path = "../fit-launcher-scraping" }

sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tracing = { workspace = true }
fit-launcher-config = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
parking_lot = "0.12"
once_cell = "1.19"
tokio-util = "0.7.17"
uuid = { version = "1.18.1", features = ["v4"] }
unrar = "0.5.8"
inno = { git = "https://github.com/mokurin000/inno/", branch = "runentry-zlibrs" }

[target.'cfg(windows)'.dependencies]
uiautomation = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }
windows-result = { workspace = true }

[target.'cfg(unix)'.dependencies]
fix-path-env = { workspace = true }

